# qibo_comb_optimisation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: api.yml  config.yml  deploy.yml  publish.yml  tests.yml
doc/source/: combinatorial_classes.rst  conf.py  index.rst  optimisation_class.rst
src/classical algo/: Goemans-williamson.py
src/combinatorial problems/: combinatorial classes.py  combinatorial_classes.py
src/combinatorial_problems/: combinatorial_classes.py
src/optimization_algo/: optimization_algo.py
src/optimization_class/: quadratic_problem.py
src/qibo_comb_optimisation/: __init__.py
src/qibo_comb_optimisation/combinatorial_classes/: combinatorial_classes.py
src/qibo_comb_optimisation/optimisation_class/: optimisation_class.py
src/qibo_comb_optimisation/optimization_class/: optimization_class.py  quadratic_problem.py
src/quadratic/: quadratic_problem.py
src/utils/: utils.py
tests/: test_combinatorial_classes.py  test_optimisation_class.py  test_optimization_class.py
