[tool.poetry]
name = "qibo_comb_optimisation"
version = "0.1.0"
description = "higher-level application developments for combinatorial optimisation problems"
authors = ["The Qibo team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/qiboteam/qibo-comb-optimisation/"
packages = [{include="qibo_comb_optimisation", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
qibo = "^0.2.14"

[tool.poetry.group.analysis.dependencies]
pylint = "^3.2.2"

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"

[tool.poetry.group.dev1.dependencies]
jupyterlab = "^4.1.8"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests/']
filterwarnings = ['ignore::RuntimeWarning']
addopts = [
  '--cov=qibo_comb_optimisation',
  '--cov-append',
  '--cov-report=xml',
  '--cov-report=html',
  '--durations=60',
]

[tool.poe.tasks]
test = "pytest"
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"
